iFeature Pro Changelog

****************************

Version 2.1.2 (10-20-11)
-Fixed syntax error in search.php
-Removed unecessary closing PHP tags in RSS icon code.
-Removed unecessary esc_url from email icon code. 

Version 2.1.1 (10-19-11)
-ANother small patch related to footer widgetized area. 

Version 2.1 (10-18-11)
-Added localization support, includes ifeature.pot as well as Spanish and French .po/.mo files. 
-WordThumb image resizing script now off by default. 
-Changed default font family to Arial, Helvetica, serif. 
-Fixed alignright float issue.
-URLs now sanitized using esc_url when necessary. 
-Removed outdated get_bloginfo('url') call from breadcrumb function. 
-Fixed several broken links in theme options page. 
-Updated theme description and tags in stylesheet. 
-Removed unecessary function_exists conditionals from sidebar templates. 

Version 2.0.3 (10-05-11)
-Small patch related to footer widgetized area.

Version 2.0.2 (10-04-11)
-Added Flickr and Myspace social icons. 
-Added breadcrumb links to single post, page, archive, and search templates. 
-Added max-width and height:auto to full-size images to fix blowout issue. 
-Floats now properly clearing. 
-Post pagination added to main blog index page. 
-register_sidebar calls now within a function hooked into widgets_init. 
-Added styling to definition list title and text elements.
-Added link to theme settings in the admin bar. 

Version 2.0.1 (8-05-11)
-Removed TimThumb, replaced with WordThumb for increased security.
-Added option to disable image resizing on iFeature Pro Slider. 
-Removed function stripping special characters from callout text value.
-Fixed title conditionals in header.php. 

Version 2.0 (8-01-11)
-TimThumb support added for automatic slider image resizing.
-Cleaned up stylesheet.
-iFeature Pro settings now found under Appearance tab in WP-Admin.
-Added Design tab, adding user control over various visual elements of the theme.