@@ -537,18 +537,18 @@ function ifp_widgets_init() {
     	'name' => 'Sidebar Left',
     	'id'   => 'sidebar-left',
     	'description'   => 'These are widgets for the left sidebar.',
-    	'before_widget' => '<div id="%1$s" class="sidebar-left-widget-style">',
+    	'before_widget' => '<div id="%1$s" class="sidebar-widget-style">',
     	'after_widget'  => '</div>',
-    	'before_title'  => '<h2 class="sidebar-left-widget-title">',
+    	'before_title'  => '<h2 class="sidebar-widget-title">',
     	'after_title'   => '</h2>'
     ));    	
     register_sidebar(array(
     	'name' => 'Sidebar Right',
     	'id'   => 'sidebar-right',
     	'description'   => 'These are widgets for the right sidebar.',
-    	'before_widget' => '<div id="%1$s" class="sidebar-right-widget-style">',
+    	'before_widget' => '<div id="%1$s" class="sidebar-widget-style">',
     	'after_widget'  => '</div>',
-    	'before_title'  => '<h2 class="sidebar-right-widget-title">',
+    	'before_title'  => '<h2 class="sidebar-widget-title">',
     	'after_title'   => '</h2>'
    	));
     	
